--- a/src/styles/components/_autocomplete.scss
+++ b/src/styles/components/_autocomplete.scss
@@ -87,7 +87,6 @@ span.user-contact {
 .ui-autocomplete {
   width: 250px !important;
   background: #fff;
-  z-index:100001;
 }
 
 .ui-helper-hidden-accessible {
